flush output in docker image - not seeing logs before exit use -server and -package tags so we don't build both on a single tag

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -12,4 +12,5 @@ COPY simt_emlite simt_emlite
 # RUN poetry cache clear --all .
 # RUN rm -rf /root/.cache /tmp/*
 
-ENTRYPOINT ["poetry", "run", "python", "-m"]
+ENV PYTHONUNBUFFERED=1
+ENTRYPOINT ["poetry", "run", "python", "-u", "-m"]
