--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ test = "simt_emlite:run_tests"
 lint = "simt_emlite:run_linter"
 build-cython = "scripts.build_cython:main"
 emop = "simt_emlite.cli.emop:main"
+certs = "simt_emlite.cli.certs:main"
 profile_download = "simt_emlite.cli.profile_download:main"
 
 [tool.poetry]
